@@ -1,3 +1,12 @@
+2009-09-30  Jan Moringen  <jmoringe@techfak.uni-bielefeld.de>
+
+	* rudel-compat.el (progress-pulse-values): new variable; indicator
+	strings used by pulsing progress reporter
+	(make-progress-reporter-pulse): new function; creates pulsing
+	progress reporter
+	(progress-reporter-pulse): new function; updates pulsing progress
+	reporter
+
 2009-09-29  Jan Moringen  <scymtym@users.sourceforge.net>
 
 	* obby/rudel-obby-server.el
